spacing and animation fixes

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,6 +11,10 @@
   }
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 ::-webkit-scrollbar {
   width: 10px;
   background-color: #383838;
